k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ankiety-live
  labels:
    app.kubernetes.io/name: ankiety-live
    kubernetes.io/metadata.name: ankiety-live
